Added search attributes and the patient card

--- a/openmrs/i18n/registration/locale_es.json
+++ b/openmrs/i18n/registration/locale_es.json
@@ -5,7 +5,7 @@
   "REGISTRATION_HOUSE_NO_STREET": "CASA SIN., CALLE",
   "REGISTRATION_GRAM_PANCHAYAT": "Gram Panchayat",
   "REGISTRATION_VILLAGE": "Village",
-  "REGISTRATION_TEHSIL": "Tehsill",
+  "REGISTRATION_TEHSIL": "Mkoa",
   "REGISTRATION_DISTRICT": "District",
   "REGISTRATION_STATE": "Expresar", "PATIENT_ATTRIBUTE_CASTE": "Casta",
   "PATIENT_ATTRIBUTE_CLASS": "Clase",
